--- a/css.css
+++ b/css.css
@@ -286,6 +286,10 @@ a:hover {
     padding: 1rem 1.5625rem 2.5rem 1.5625rem;
 }
 
+.column_gap0_75r {
+    column-gap: 0.75rem;
+}
+
 /* ================================colors======================== */
 .backg_black {
     background-color: #474747;
@@ -325,6 +329,14 @@ a:hover {
     font-weight: 600;
     font-style: italic;
     color: #474747;
+}
+
+.f_2_6875__fw600__lh_none__col474747__styl_italic_colfff {
+    font-family: "Playfair Display";
+    font-size: 2.6875rem;
+    font-weight: 600;
+    font-style: italic;
+    color: #FFF;
 }
 
 .f_1__fw500__lh_150__col2c2f24 {
@@ -394,6 +406,15 @@ a:hover {
     font-weight: 400;
     line-height: 150%;
     color: var(--neutral-06, #414536);
+}
+
+.f_1__fw400__lh_150__colADB29E {
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    color: var(--neutral-04, #ADB29E);
 }
 
 .f_1__fw400__lh_150__colFFF {
