--- a/css.css
+++ b/css.css
@@ -111,6 +111,10 @@ a:hover {
     width: 41%;
 }
 
+.ml_8_4375r {
+    margin-left: 8.4375rem;
+}
+
 .ml_1r {
     margin-left: 1rem;
 }
@@ -290,6 +294,22 @@ a:hover {
     column-gap: 0.75rem;
 }
 
+.ml_7_5r {
+    margin-left: 7.5rem;
+}
+
+.column_gap1_25 {
+    column-gap: 1.25rem;
+}
+
+.pb3_375r {
+    padding-bottom: 3.375rem;
+}
+
+.pY5_375r {
+    padding: 5.375rem 0;
+}
+
 /* ================================colors======================== */
 .backg_black {
     background-color: #474747;
@@ -355,6 +375,14 @@ a:hover {
     color: #182226;
 }
 
+.f_1__fw700__lh_150__colfff {
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 150%;
+    color: #FFF;
+}
+
 .f_1__fw500__lh_150__col737865 {
     color: var(--neutral-05, #737865);
     font-family: "DM Sans";
@@ -415,6 +443,15 @@ a:hover {
     font-weight: 400;
     line-height: 150%;
     color: var(--neutral-04, #ADB29E);
+}
+
+.f_1__fw400__lh_150__colDBDFD0 {
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    color: var(--neutral-03, #DBDFD0);
 }
 
 .f_1__fw400__lh_150__colFFF {
@@ -581,6 +618,10 @@ a:hover {
 
 .border_rad_12px {
     border-radius: 12px;
+}
+
+.border_414536 {
+    border: 1px solid #414536;
 }
 
 /* ==================================images=================== */
